--- a/experiment-4.ipynb
+++ b/experiment-4.ipynb
@@ -31,8 +31,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f5c4f2e2-d4aa-4aa8-b38d-d66d3a8836d5",
+   "metadata": {},
+   "source": [
+    "# Explanation of what follows\n",
+    "\n",
+    "Identities in JSON, plus a schema..."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "id": "bcca6c24-ab8b-4904-832d-081697c440c1",
    "metadata": {},
    "outputs": [],
@@ -42,7 +52,7 @@
     "  lname: 'Snow',\n",
     "  highly_secretive: {\n",
     "    secret: 'super-duper-secret',\n",
-    "    email: 'john.smith@example.com',\n",
+    "    email: 'john.snow@example.com',\n",
     "    SSN: '123-456789-0',\n",
     "    'user-id': 'user:USR-22201'\n",
     "  },\n",
@@ -86,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "09beefed-6cc2-4cfb-82f0-5d6c39918720",
    "metadata": {},
    "outputs": [],
@@ -96,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "6095a054-a6c1-40fc-84b1-bbc8da496c00",
    "metadata": {},
    "outputs": [],
@@ -115,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "ff81320a-06e4-4655-97cd-6c49ef854966",
    "metadata": {},
    "outputs": [],
@@ -134,12 +144,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "id": "58c1ddac-e07a-417c-8951-da0175c758da",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  encodedMessages: {\n",
+      "    fname: Uint8Array(32) [\n",
+      "       \u001b[33m42\u001b[39m,  \u001b[33m86\u001b[39m,  \u001b[33m56\u001b[39m, \u001b[33m184\u001b[39m,  \u001b[33m77\u001b[39m, \u001b[33m121\u001b[39m,  \u001b[33m67\u001b[39m,  \u001b[33m97\u001b[39m,\n",
+      "      \u001b[33m203\u001b[39m, \u001b[33m100\u001b[39m, \u001b[33m141\u001b[39m, \u001b[33m210\u001b[39m, \u001b[33m110\u001b[39m,  \u001b[33m82\u001b[39m, \u001b[33m189\u001b[39m,  \u001b[33m71\u001b[39m,\n",
+      "      \u001b[33m229\u001b[39m, \u001b[33m111\u001b[39m, \u001b[33m149\u001b[39m, \u001b[33m115\u001b[39m, \u001b[33m136\u001b[39m, \u001b[33m218\u001b[39m, \u001b[33m240\u001b[39m, \u001b[33m204\u001b[39m,\n",
+      "       \u001b[33m62\u001b[39m,  \u001b[33m58\u001b[39m, \u001b[33m165\u001b[39m, \u001b[33m164\u001b[39m, \u001b[33m102\u001b[39m,  \u001b[33m83\u001b[39m,  \u001b[33m20\u001b[39m,  \u001b[33m34\u001b[39m\n",
+      "    ],\n",
+      "    \u001b[32m'highly_secretive.SSN'\u001b[39m: Uint8Array(32) [\n",
+      "       \u001b[33m73\u001b[39m, \u001b[33m238\u001b[39m,  \u001b[33m75\u001b[39m, \u001b[33m224\u001b[39m,  \u001b[33m24\u001b[39m, \u001b[33m231\u001b[39m,  \u001b[33m86\u001b[39m,  \u001b[33m45\u001b[39m,\n",
+      "       \u001b[33m58\u001b[39m, \u001b[33m244\u001b[39m, \u001b[33m138\u001b[39m, \u001b[33m177\u001b[39m, \u001b[33m115\u001b[39m, \u001b[33m168\u001b[39m, \u001b[33m209\u001b[39m,   \u001b[33m9\u001b[39m,\n",
+      "      \u001b[33m149\u001b[39m, \u001b[33m111\u001b[39m,  \u001b[33m20\u001b[39m, \u001b[33m102\u001b[39m,   \u001b[33m6\u001b[39m, \u001b[33m117\u001b[39m,  \u001b[33m83\u001b[39m, \u001b[33m144\u001b[39m,\n",
+      "      \u001b[33m121\u001b[39m,  \u001b[33m47\u001b[39m,  \u001b[33m46\u001b[39m, \u001b[33m241\u001b[39m,  \u001b[33m27\u001b[39m,  \u001b[33m63\u001b[39m,  \u001b[33m44\u001b[39m,  \u001b[33m10\u001b[39m\n",
+      "    ],\n",
+      "    \u001b[32m'highly_secretive.email'\u001b[39m: Uint8Array(32) [\n",
+      "      \u001b[33m228\u001b[39m, \u001b[33m158\u001b[39m, \u001b[33m232\u001b[39m, \u001b[33m71\u001b[39m, \u001b[33m216\u001b[39m, \u001b[33m200\u001b[39m, \u001b[33m245\u001b[39m,\n",
+      "      \u001b[33m231\u001b[39m, \u001b[33m200\u001b[39m,  \u001b[33m98\u001b[39m, \u001b[33m20\u001b[39m, \u001b[33m146\u001b[39m, \u001b[33m231\u001b[39m, \u001b[33m159\u001b[39m,\n",
+      "      \u001b[33m103\u001b[39m, \u001b[33m181\u001b[39m,  \u001b[33m70\u001b[39m, \u001b[33m44\u001b[39m, \u001b[33m189\u001b[39m, \u001b[33m114\u001b[39m, \u001b[33m219\u001b[39m,\n",
+      "      \u001b[33m213\u001b[39m, \u001b[33m239\u001b[39m, \u001b[33m227\u001b[39m, \u001b[33m98\u001b[39m,  \u001b[33m44\u001b[39m, \u001b[33m152\u001b[39m, \u001b[33m245\u001b[39m,\n",
+      "      \u001b[33m164\u001b[39m,  \u001b[33m32\u001b[39m,  \u001b[33m21\u001b[39m, \u001b[33m52\u001b[39m\n",
+      "    ],\n",
+      "    \u001b[32m'highly_secretive.secret'\u001b[39m: Uint8Array(32) [\n",
+      "       \u001b[33m18\u001b[39m, \u001b[33m159\u001b[39m, \u001b[33m120\u001b[39m, \u001b[33m134\u001b[39m, \u001b[33m229\u001b[39m,   \u001b[33m8\u001b[39m,  \u001b[33m87\u001b[39m,  \u001b[33m30\u001b[39m,\n",
+      "       \u001b[33m64\u001b[39m,  \u001b[33m25\u001b[39m, \u001b[33m214\u001b[39m,  \u001b[33m25\u001b[39m,  \u001b[33m18\u001b[39m,  \u001b[33m84\u001b[39m,  \u001b[33m62\u001b[39m, \u001b[33m236\u001b[39m,\n",
+      "      \u001b[33m201\u001b[39m, \u001b[33m190\u001b[39m, \u001b[33m243\u001b[39m, \u001b[33m164\u001b[39m, \u001b[33m117\u001b[39m, \u001b[33m227\u001b[39m, \u001b[33m154\u001b[39m,  \u001b[33m18\u001b[39m,\n",
+      "      \u001b[33m133\u001b[39m, \u001b[33m212\u001b[39m,  \u001b[33m83\u001b[39m, \u001b[33m132\u001b[39m, \u001b[33m115\u001b[39m, \u001b[33m189\u001b[39m, \u001b[33m242\u001b[39m,  \u001b[33m20\u001b[39m\n",
+      "    ],\n",
+      "    \u001b[32m'highly_secretive.user-id'\u001b[39m: Uint8Array(32) [\n",
+      "       \u001b[33m39\u001b[39m, \u001b[33m209\u001b[39m,  \u001b[33m37\u001b[39m, \u001b[33m227\u001b[39m, \u001b[33m169\u001b[39m, \u001b[33m218\u001b[39m,  \u001b[33m22\u001b[39m,  \u001b[33m68\u001b[39m,\n",
+      "       \u001b[33m89\u001b[39m,   \u001b[33m4\u001b[39m,  \u001b[33m44\u001b[39m, \u001b[33m114\u001b[39m, \u001b[33m207\u001b[39m, \u001b[33m186\u001b[39m,  \u001b[33m71\u001b[39m,  \u001b[33m87\u001b[39m,\n",
+      "      \u001b[33m132\u001b[39m,  \u001b[33m42\u001b[39m, \u001b[33m226\u001b[39m, \u001b[33m193\u001b[39m,  \u001b[33m55\u001b[39m, \u001b[33m212\u001b[39m,  \u001b[33m15\u001b[39m, \u001b[33m253\u001b[39m,\n",
+      "      \u001b[33m206\u001b[39m,  \u001b[33m17\u001b[39m, \u001b[33m110\u001b[39m, \u001b[33m162\u001b[39m,  \u001b[33m66\u001b[39m,  \u001b[33m16\u001b[39m, \u001b[33m192\u001b[39m,  \u001b[33m43\u001b[39m\n",
+      "    ],\n",
+      "    lname: Uint8Array(32) [\n",
+      "       \u001b[33m71\u001b[39m, \u001b[33m109\u001b[39m,  \u001b[33m45\u001b[39m, \u001b[33m105\u001b[39m,  \u001b[33m21\u001b[39m, \u001b[33m136\u001b[39m, \u001b[33m194\u001b[39m, \u001b[33m128\u001b[39m,\n",
+      "       \u001b[33m48\u001b[39m, \u001b[33m176\u001b[39m,  \u001b[33m33\u001b[39m, \u001b[33m146\u001b[39m, \u001b[33m254\u001b[39m,  \u001b[33m48\u001b[39m, \u001b[33m145\u001b[39m, \u001b[33m120\u001b[39m,\n",
+      "      \u001b[33m104\u001b[39m, \u001b[33m100\u001b[39m, \u001b[33m105\u001b[39m,  \u001b[33m30\u001b[39m, \u001b[33m118\u001b[39m, \u001b[33m129\u001b[39m, \u001b[33m150\u001b[39m,  \u001b[33m30\u001b[39m,\n",
+      "      \u001b[33m183\u001b[39m,  \u001b[33m35\u001b[39m,  \u001b[33m34\u001b[39m, \u001b[33m104\u001b[39m,  \u001b[33m33\u001b[39m, \u001b[33m244\u001b[39m, \u001b[33m121\u001b[39m,  \u001b[33m92\u001b[39m\n",
+      "    ],\n",
+      "    \u001b[32m'location.address'\u001b[39m: Uint8Array(32) [\n",
+      "      \u001b[33m144\u001b[39m, \u001b[33m255\u001b[39m, \u001b[33m203\u001b[39m, \u001b[33m244\u001b[39m, \u001b[33m139\u001b[39m, \u001b[33m107\u001b[39m, \u001b[33m157\u001b[39m,  \u001b[33m75\u001b[39m,\n",
+      "       \u001b[33m97\u001b[39m,  \u001b[33m89\u001b[39m, \u001b[33m116\u001b[39m,  \u001b[33m30\u001b[39m, \u001b[33m152\u001b[39m, \u001b[33m196\u001b[39m, \u001b[33m106\u001b[39m,  \u001b[33m54\u001b[39m,\n",
+      "      \u001b[33m203\u001b[39m, \u001b[33m143\u001b[39m,  \u001b[33m45\u001b[39m,  \u001b[33m94\u001b[39m, \u001b[33m200\u001b[39m,  \u001b[33m62\u001b[39m,  \u001b[33m50\u001b[39m,  \u001b[33m32\u001b[39m,\n",
+      "      \u001b[33m236\u001b[39m, \u001b[33m213\u001b[39m, \u001b[33m100\u001b[39m, \u001b[33m101\u001b[39m,  \u001b[33m55\u001b[39m, \u001b[33m186\u001b[39m,  \u001b[33m91\u001b[39m, \u001b[33m112\u001b[39m\n",
+      "    ],\n",
+      "    \u001b[32m'location.city'\u001b[39m: Uint8Array(32) [\n",
+      "       \u001b[33m14\u001b[39m, \u001b[33m117\u001b[39m,  \u001b[33m34\u001b[39m,  \u001b[33m56\u001b[39m, \u001b[33m149\u001b[39m, \u001b[33m185\u001b[39m,  \u001b[33m34\u001b[39m, \u001b[33m233\u001b[39m,\n",
+      "      \u001b[33m219\u001b[39m, \u001b[33m254\u001b[39m,  \u001b[33m52\u001b[39m, \u001b[33m182\u001b[39m, \u001b[33m149\u001b[39m, \u001b[33m111\u001b[39m, \u001b[33m120\u001b[39m, \u001b[33m170\u001b[39m,\n",
+      "       \u001b[33m31\u001b[39m,   \u001b[33m6\u001b[39m,  \u001b[33m51\u001b[39m, \u001b[33m165\u001b[39m, \u001b[33m230\u001b[39m,  \u001b[33m36\u001b[39m, \u001b[33m132\u001b[39m,  \u001b[33m40\u001b[39m,\n",
+      "      \u001b[33m235\u001b[39m, \u001b[33m177\u001b[39m, \u001b[33m181\u001b[39m, \u001b[33m131\u001b[39m, \u001b[33m178\u001b[39m, \u001b[33m191\u001b[39m,   \u001b[33m9\u001b[39m,   \u001b[33m6\u001b[39m\n",
+      "    ],\n",
+      "    \u001b[32m'location.country'\u001b[39m: Uint8Array(32) [\n",
+      "       \u001b[33m62\u001b[39m, \u001b[33m108\u001b[39m,  \u001b[33m83\u001b[39m,  \u001b[33m99\u001b[39m,  \u001b[33m68\u001b[39m, \u001b[33m221\u001b[39m, \u001b[33m129\u001b[39m, \u001b[33m175\u001b[39m,\n",
+      "       \u001b[33m29\u001b[39m, \u001b[33m164\u001b[39m, \u001b[33m112\u001b[39m, \u001b[33m187\u001b[39m,  \u001b[33m11\u001b[39m,  \u001b[33m54\u001b[39m,  \u001b[33m88\u001b[39m, \u001b[33m253\u001b[39m,\n",
+      "      \u001b[33m164\u001b[39m,  \u001b[33m60\u001b[39m, \u001b[33m227\u001b[39m, \u001b[33m152\u001b[39m, \u001b[33m252\u001b[39m,  \u001b[33m35\u001b[39m, \u001b[33m123\u001b[39m,  \u001b[33m59\u001b[39m,\n",
+      "      \u001b[33m104\u001b[39m, \u001b[33m254\u001b[39m, \u001b[33m248\u001b[39m, \u001b[33m156\u001b[39m, \u001b[33m128\u001b[39m,   \u001b[33m9\u001b[39m,   \u001b[33m4\u001b[39m,  \u001b[33m27\u001b[39m\n",
+      "    ],\n",
+      "    \u001b[32m'physical.height'\u001b[39m: Uint8Array(32) [\n",
+      "      \u001b[33m164\u001b[39m, \u001b[33m176\u001b[39m,  \u001b[33m79\u001b[39m, \u001b[33m163\u001b[39m,  \u001b[33m76\u001b[39m,  \u001b[33m61\u001b[39m,   \u001b[33m7\u001b[39m,  \u001b[33m88\u001b[39m,\n",
+      "       \u001b[33m43\u001b[39m,  \u001b[33m83\u001b[39m, \u001b[33m128\u001b[39m,  \u001b[33m17\u001b[39m, \u001b[33m134\u001b[39m, \u001b[33m172\u001b[39m, \u001b[33m203\u001b[39m,  \u001b[33m40\u001b[39m,\n",
+      "       \u001b[33m21\u001b[39m, \u001b[33m189\u001b[39m, \u001b[33m209\u001b[39m, \u001b[33m252\u001b[39m, \u001b[33m141\u001b[39m,  \u001b[33m20\u001b[39m, \u001b[33m197\u001b[39m, \u001b[33m188\u001b[39m,\n",
+      "       \u001b[33m32\u001b[39m,  \u001b[33m31\u001b[39m,  \u001b[33m26\u001b[39m, \u001b[33m157\u001b[39m, \u001b[33m169\u001b[39m, \u001b[33m171\u001b[39m, \u001b[33m177\u001b[39m, \u001b[33m109\u001b[39m\n",
+      "    ],\n",
+      "    \u001b[32m'physical.race'\u001b[39m: Uint8Array(32) [\n",
+      "      \u001b[33m177\u001b[39m, \u001b[33m190\u001b[39m, \u001b[33m204\u001b[39m,  \u001b[33m67\u001b[39m, \u001b[33m200\u001b[39m, \u001b[33m196\u001b[39m,  \u001b[33m73\u001b[39m,\n",
+      "       \u001b[33m12\u001b[39m,  \u001b[33m40\u001b[39m, \u001b[33m113\u001b[39m, \u001b[33m167\u001b[39m, \u001b[33m129\u001b[39m, \u001b[33m169\u001b[39m,  \u001b[33m10\u001b[39m,\n",
+      "      \u001b[33m154\u001b[39m, \u001b[33m136\u001b[39m, \u001b[33m175\u001b[39m, \u001b[33m168\u001b[39m, \u001b[33m210\u001b[39m, \u001b[33m172\u001b[39m, \u001b[33m182\u001b[39m,\n",
+      "      \u001b[33m131\u001b[39m,  \u001b[33m90\u001b[39m, \u001b[33m156\u001b[39m,  \u001b[33m16\u001b[39m, \u001b[33m250\u001b[39m, \u001b[33m198\u001b[39m,  \u001b[33m47\u001b[39m,\n",
+      "       \u001b[33m11\u001b[39m,  \u001b[33m30\u001b[39m, \u001b[33m213\u001b[39m, \u001b[33m104\u001b[39m\n",
+      "    ],\n",
+      "    \u001b[32m'physical.weight'\u001b[39m: Uint8Array(32) [\n",
+      "       \u001b[33m86\u001b[39m, \u001b[33m165\u001b[39m, \u001b[33m144\u001b[39m,   \u001b[33m7\u001b[39m, \u001b[33m105\u001b[39m,  \u001b[33m27\u001b[39m, \u001b[33m236\u001b[39m, \u001b[33m125\u001b[39m,\n",
+      "      \u001b[33m251\u001b[39m, \u001b[33m215\u001b[39m, \u001b[33m231\u001b[39m, \u001b[33m205\u001b[39m,  \u001b[33m30\u001b[39m,  \u001b[33m87\u001b[39m,  \u001b[33m61\u001b[39m, \u001b[33m182\u001b[39m,\n",
+      "      \u001b[33m119\u001b[39m, \u001b[33m113\u001b[39m, \u001b[33m251\u001b[39m, \u001b[33m231\u001b[39m,  \u001b[33m33\u001b[39m, \u001b[33m144\u001b[39m, \u001b[33m173\u001b[39m, \u001b[33m215\u001b[39m,\n",
+      "      \u001b[33m164\u001b[39m, \u001b[33m154\u001b[39m, \u001b[33m155\u001b[39m,  \u001b[33m17\u001b[39m,  \u001b[33m30\u001b[39m, \u001b[33m232\u001b[39m, \u001b[33m134\u001b[39m,  \u001b[33m56\u001b[39m\n",
+      "    ],\n",
+      "    score: Uint8Array(32) [\n",
+      "       \u001b[33m82\u001b[39m, \u001b[33m172\u001b[39m, \u001b[33m114\u001b[39m, \u001b[33m233\u001b[39m,  \u001b[33m43\u001b[39m, \u001b[33m211\u001b[39m,  \u001b[33m42\u001b[39m, \u001b[33m201\u001b[39m,\n",
+      "      \u001b[33m144\u001b[39m, \u001b[33m236\u001b[39m,  \u001b[33m26\u001b[39m,  \u001b[33m58\u001b[39m, \u001b[33m141\u001b[39m,  \u001b[33m73\u001b[39m,  \u001b[33m73\u001b[39m,  \u001b[33m53\u001b[39m,\n",
+      "       \u001b[33m65\u001b[39m, \u001b[33m174\u001b[39m,  \u001b[33m89\u001b[39m,  \u001b[33m71\u001b[39m,  \u001b[33m86\u001b[39m,  \u001b[33m25\u001b[39m, \u001b[33m250\u001b[39m, \u001b[33m193\u001b[39m,\n",
+      "      \u001b[33m113\u001b[39m, \u001b[33m159\u001b[39m,  \u001b[33m86\u001b[39m, \u001b[33m188\u001b[39m, \u001b[33m228\u001b[39m,  \u001b[33m59\u001b[39m, \u001b[33m110\u001b[39m,  \u001b[33m73\u001b[39m\n",
+      "    ],\n",
+      "    timeOfBirth: Uint8Array(32) [\n",
+      "      \u001b[33m187\u001b[39m, \u001b[33m182\u001b[39m,  \u001b[33m90\u001b[39m, \u001b[33m108\u001b[39m, \u001b[33m177\u001b[39m, \u001b[33m223\u001b[39m, \u001b[33m174\u001b[39m, \u001b[33m116\u001b[39m,\n",
+      "      \u001b[33m100\u001b[39m,  \u001b[33m31\u001b[39m, \u001b[33m140\u001b[39m,  \u001b[33m66\u001b[39m, \u001b[33m254\u001b[39m, \u001b[33m120\u001b[39m,  \u001b[33m72\u001b[39m, \u001b[33m197\u001b[39m,\n",
+      "      \u001b[33m137\u001b[39m, \u001b[33m246\u001b[39m,   \u001b[33m8\u001b[39m, \u001b[33m130\u001b[39m, \u001b[33m237\u001b[39m,  \u001b[33m47\u001b[39m,  \u001b[33m82\u001b[39m,  \u001b[33m98\u001b[39m,\n",
+      "      \u001b[33m221\u001b[39m, \u001b[33m147\u001b[39m, \u001b[33m237\u001b[39m, \u001b[33m250\u001b[39m, \u001b[33m254\u001b[39m,  \u001b[33m49\u001b[39m, \u001b[33m108\u001b[39m,  \u001b[33m93\u001b[39m\n",
+      "    ]\n",
+      "  },\n",
+      "  signature: BBSPlusSignatureG1 {\n",
+      "    value: Uint8Array(112) [\n",
+      "      \u001b[33m179\u001b[39m, \u001b[33m198\u001b[39m, \u001b[33m171\u001b[39m, \u001b[33m118\u001b[39m, \u001b[33m248\u001b[39m, \u001b[33m182\u001b[39m,  \u001b[33m43\u001b[39m, \u001b[33m232\u001b[39m, \u001b[33m128\u001b[39m,  \u001b[33m88\u001b[39m, \u001b[33m170\u001b[39m, \u001b[33m147\u001b[39m,\n",
+      "       \u001b[33m20\u001b[39m,  \u001b[33m27\u001b[39m, \u001b[33m138\u001b[39m, \u001b[33m151\u001b[39m, \u001b[33m113\u001b[39m,  \u001b[33m37\u001b[39m, \u001b[33m234\u001b[39m,  \u001b[33m21\u001b[39m, \u001b[33m133\u001b[39m,   \u001b[33m0\u001b[39m, \u001b[33m216\u001b[39m,  \u001b[33m23\u001b[39m,\n",
+      "      \u001b[33m125\u001b[39m,  \u001b[33m24\u001b[39m, \u001b[33m104\u001b[39m, \u001b[33m188\u001b[39m, \u001b[33m101\u001b[39m, \u001b[33m183\u001b[39m, \u001b[33m191\u001b[39m, \u001b[33m186\u001b[39m, \u001b[33m102\u001b[39m, \u001b[33m135\u001b[39m,  \u001b[33m25\u001b[39m, \u001b[33m151\u001b[39m,\n",
+      "      \u001b[33m147\u001b[39m,   \u001b[33m3\u001b[39m, \u001b[33m164\u001b[39m,  \u001b[33m21\u001b[39m, \u001b[33m107\u001b[39m, \u001b[33m149\u001b[39m,  \u001b[33m16\u001b[39m, \u001b[33m166\u001b[39m, \u001b[33m210\u001b[39m, \u001b[33m253\u001b[39m,  \u001b[33m84\u001b[39m,  \u001b[33m40\u001b[39m,\n",
+      "      \u001b[33m245\u001b[39m,  \u001b[33m40\u001b[39m,  \u001b[33m70\u001b[39m, \u001b[33m236\u001b[39m,  \u001b[33m91\u001b[39m, \u001b[33m223\u001b[39m,   \u001b[33m5\u001b[39m, \u001b[33m143\u001b[39m,  \u001b[33m26\u001b[39m,  \u001b[33m94\u001b[39m,  \u001b[33m80\u001b[39m, \u001b[33m108\u001b[39m,\n",
+      "      \u001b[33m172\u001b[39m,  \u001b[33m53\u001b[39m, \u001b[33m202\u001b[39m, \u001b[33m176\u001b[39m,  \u001b[33m52\u001b[39m,  \u001b[33m13\u001b[39m, \u001b[33m252\u001b[39m, \u001b[33m159\u001b[39m,   \u001b[33m1\u001b[39m, \u001b[33m110\u001b[39m, \u001b[33m201\u001b[39m, \u001b[33m236\u001b[39m,\n",
+      "      \u001b[33m131\u001b[39m, \u001b[33m160\u001b[39m,  \u001b[33m37\u001b[39m,  \u001b[33m86\u001b[39m, \u001b[33m215\u001b[39m,  \u001b[33m87\u001b[39m, \u001b[33m183\u001b[39m,  \u001b[33m71\u001b[39m, \u001b[33m175\u001b[39m, \u001b[33m240\u001b[39m,  \u001b[33m50\u001b[39m, \u001b[33m134\u001b[39m,\n",
+      "       \u001b[33m19\u001b[39m, \u001b[33m119\u001b[39m, \u001b[33m242\u001b[39m, \u001b[33m212\u001b[39m,  \u001b[33m76\u001b[39m, \u001b[33m200\u001b[39m,  \u001b[33m33\u001b[39m, \u001b[33m179\u001b[39m, \u001b[33m129\u001b[39m,  \u001b[33m63\u001b[39m, \u001b[33m147\u001b[39m,  \u001b[33m67\u001b[39m,\n",
+      "      \u001b[33m161\u001b[39m, \u001b[33m163\u001b[39m, \u001b[33m235\u001b[39m, \u001b[33m149\u001b[39m,\n",
+      "      ... 12 more items\n",
+      "    ]\n",
+      "  }\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
-    "import { BBSPlusSignatureG1 } from '@docknetwork/crypto-wasm-ts'\n",
+    "import { BBSPlusSignatureG1, getAdaptedSignatureParamsForMessages } from '@docknetwork/crypto-wasm-ts'\n",
     "\n",
     "\n",
     "// The signing function will encode bytes to a field element as true is passed\n",
@@ -148,7 +269,10 @@
     "// As the messages are not encoded, pass true to the verification function to make it encode messages before verifying the signature.\n",
     "sig.signature.verifyMessageObject(JOHN_SNOW_BANK_IDENTITY, pk, label, encoder);\n",
     "\n",
-    "const sigParams = getAdaptedSignatureParamsForMessages(cryptoParams, SCHEMA);"
+    "const sigParams = getAdaptedSignatureParamsForMessages(cryptoParams, SCHEMA);\n",
+    "\n",
+    "sig\n",
+    "// console.log(sig.signature);"
    ]
   },
   {
@@ -280,8 +404,8 @@
    "source": [
     "# Zero-Knowledge proofs!\n",
     "Here's we will provide a proof of the following: \n",
-    "1. User's firstName, lastName, location\n",
-    "2. Score > 5"
+    "1. Selective disclosure of: User's firstName, lastName, location\n",
+    "2. Range proof: Score > 5"
    ]
   },
   {
@@ -336,7 +460,7 @@
     "\n",
     "// Create a BBS signature\n",
     "const statementB1 = Statement.bbsPlusSignatureProverConstantTime(sigParams, revealedMsgsB, false);\n",
-    "const statementB2 = Statement.boundCheckLegoProverFromSetupParamRefs(3, 10000, 0);\n",
+    "const statementB2 = Statement.boundCheckLegoProverFromSetupParamRefs(6, 1000, 0);\n",
     "const statementsB = new Statements();\n",
     "statementsB.add(statementB1);\n",
     "statementsB.add(statementB2);\n",
