clean: move experiments to separate folder

--- a/experiments/experiment-1.ipynb
+++ b/experiments/experiment-1.ipynb
@@ -103,7 +103,7 @@
     "verifier.update(message)\n",
     "console.log(verifier.verify(publicKey, signature, 'base64'))\n",
     "\n",
-    "// try another false message\n",
+    "// Try another false message\n",
     "verifier = crypto.createVerify('SHA256');\n",
     "verifier.update(\"Another random message!\")\n",
     "console.log(verifier.verify(publicKey, signature, 'base64'))"
