adding comments after review

--- a/class-01.ipynb
+++ b/class-01.ipynb
@@ -147,6 +147,7 @@
    "source": [
     "// verifier now recieves \"message\" and \"signature\" data\n",
     "// The verifier should also have access to the publicKey of the issuer\n",
+    "// through a Public Key Infrastructure (PKI)\n",
     "\n",
     "let verifier = crypto.createVerify('SHA256');\n",
     "verifier.update(message)\n",
@@ -277,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 62,
    "id": "66b62c76-7085-4ff2-a386-696bf821aaa7",
    "metadata": {},
    "outputs": [
@@ -285,6 +286,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{\n",
+      "  name: \u001b[32m'a5d0dd92108bc55cadfaf56e36a60a7121b059d9e0d09c2d24d853e9d1d14ea7'\u001b[39m,\n",
+      "  age: \u001b[32m'd029fa3a95e174a19934857f535eb9427d967218a36ea014b70ad704bc6c8d1c'\u001b[39m,\n",
+      "  profession: \u001b[32m'c249aac9d89f89626fbcaa519d53e386478a22b775414c324e61289e033f1652'\u001b[39m\n",
+      "}\n",
       "Reconstructed data is the same as hashed data?: true\n"
      ]
     }
@@ -305,9 +311,11 @@
     "\n",
     "// step 2. Replace the respective values with the revealed data.\n",
     "for (const key in HOLDER_SHARED_DATA) {\n",
+    "    // hashValue(HOLDER_SHARED_DATA[key], HOLDER_HASH_ALGORITHM) == RETRIEVED_DATA[key]\n",
+    "    // TODO: use the line above. compare in this step\n",
     "    RETRIEVED_DATA[key] = hashValue(HOLDER_SHARED_DATA[key], HOLDER_HASH_ALGORITHM);\n",
     "}\n",
-    "RETRIEVED_DATA\n",
+    "console.log(RETRIEVED_DATA)\n",
     "\n",
     "// step 3. Make sure the reconstructed object is the same as the original hashed data\n",
     "console.log(`Reconstructed data is the same as hashed data?: ${JSON.stringify(RETRIEVED_DATA) === message}`)\n",
@@ -334,7 +342,8 @@
     "\n",
     "### Is this cryptographic scheme unlinkable?\n",
     "\n",
-    "No! because verifiers can store the signature which will always stay the same. This way, verifiers can compare signatures, and deduce that it's the same credential by the same user. \n",
+    "No! because verifiers can store the signature which will always stay the same. This way, verifiers can compare signatures, and deduce that it's the same credential by the same user.  \n",
+    "Also the hashed values will always stay the same.\n",
     "\n",
     "Another reason is that verifiers always have access to all the data in the hashed form, so even though they don't know the hashed value, they can still compare hashed values together, and deduce that result. For fields like age, it's also easy to guess the hidden value. "
    ]
@@ -363,12 +372,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1579bdb7-02c7-4b7e-92e7-79568d23a3c7",
+   "cell_type": "markdown",
+   "id": "e58badca-c129-4a78-a9ac-01c9bea52992",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## ToDo: Workshop activities\n",
+    "What can the student change, adjust to change the functionalities? \n",
+    "Exercise: \n",
+    "1. Ask about the downsides of using hashed values in E-ID.\n",
+    "2. Focus on implementing Salt-based hashing to prevent \"limited set hashed values like age\".\n",
+    "\n",
+    "## Fixes\n",
+    "- Use birthdate as age can get outdated\n",
+    "- Assume that SHA256 is the standard for all actors of the system - Don't communicate it.\n",
+    "- Review the ToDos in code"
+   ]
   }
  ],
  "metadata": {
