--- a/class-03.ipynb
+++ b/class-03.ipynb
@@ -103,6 +103,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f4db5ab7-20f8-49ae-8f75-b9cfc14404a3",
+   "metadata": {},
+   "source": [
+    "# LegoGroth16"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "493d049b-3267-4826-a621-4bb8027830cb",
@@ -111,7 +119,7 @@
    "source": [
     "// This section establishes a range proof capability based on the LegoGroth16 algorithm\n",
     "\n",
-    "// The verifier is responsible for creating these keys, then sharing the proving key with \n",
+    "// The verifier is responsible for creating these keys, then sharing only the proving key with \n",
     "// the credential holder\n",
     "import { BoundCheckSnarkSetup, SetupParam } from '@docknetwork/crypto-wasm-ts';\n",
     "const provingKey = BoundCheckSnarkSetup();\n",
@@ -129,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "b70c8b80-d9c7-4f37-b36f-2306d4386b9e",
    "metadata": {},
    "outputs": [],
@@ -138,7 +146,7 @@
     "const builder = new PresentationBuilder();\n",
     "builder.addCredential(credential, publicKey)\n",
     "builder.markAttributesRevealed(0, new Set<string>(['credentialSubject.name', 'credentialSubject.profession']));\n",
-    "builder.enforceBounds(0, 'credentialSubject.age', 18, 64, 'random', snarkProvingKey);\n",
+    "builder.enforceBounds(0, 'credentialSubject.age', 18, 64, 'ageRangeCheck', snarkProvingKey);\n",
     "\n",
     "const presentation = builder.finalize();"
    ]
@@ -153,7 +161,6 @@
     "1. selected data to be revealed\n",
     "2. Schema of the credential\n",
     "3. Proof of signature\n",
-    "4. \n",
     "\n",
     "All these info and more are stored in the \"presentation object\". Note that this object is a completely serializable JSON object.\n",
     "\n",
@@ -210,10 +217,10 @@
    "source": [
     "import { Presentation } from '@docknetwork/crypto-wasm-ts'\n",
     "\n",
-    "const predicateParams = new Map([['random', snarkVerifyingKey]]);\n",
+    "const predicateParams = new Map([['ageRangeCheck', snarkVerifyingKey]]);\n",
     "\n",
     "const recreatedPres = Presentation.fromJSON(receivedObjectOnVerifierSide)\n",
-    "recreatedPres.verify([publicKey], undefined, predicateParams, undefined, undefined, undefined)"
+    "recreatedPres.verify([publicKey], undefined, predicateParams)"
    ]
   },
   {
@@ -227,7 +234,14 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  age: [ { min: \u001b[33m18\u001b[39m, max: \u001b[33m64\u001b[39m, paramId: \u001b[32m'random'\u001b[39m, protocol: \u001b[32m'LegoGroth16'\u001b[39m } ]\n",
+      "  age: [\n",
+      "    {\n",
+      "      min: \u001b[33m18\u001b[39m,\n",
+      "      max: \u001b[33m64\u001b[39m,\n",
+      "      paramId: \u001b[32m'ageRangeCheck'\u001b[39m,\n",
+      "      protocol: \u001b[32m'LegoGroth16'\u001b[39m\n",
+      "    }\n",
+      "  ]\n",
       "}\n"
      ]
     }
@@ -288,8 +302,8 @@
     "builder.markAttributesRevealed(0, new Set<string>(['credentialSubject.name', 'credentialSubject.profession']));\n",
     "\n",
     "// The Holder creates his own parameters for the range proof\n",
-    "const boundCheckBppParams1 = new BoundCheckBppParams(stringToBytes('Bulletproofs++ testing')).decompress();\n",
-    "builder.enforceBounds(0, 'credentialSubject.age', 18, 64, 'random', boundCheckBppParams1);\n",
+    "const boundCheckBppParams1 = new BoundCheckBppParams(stringToBytes('Common Reference String')).decompress();\n",
+    "builder.enforceBounds(0, 'credentialSubject.age', 18, 64, 'ageRangeCheck', boundCheckBppParams1);\n",
     "\n",
     "const presentation = builder.finalize();\n",
     "const receivedObjectOnVerifierSide = presentation.toJSON()\n",
@@ -298,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "b07e3e40-da17-4c0d-ac31-66e3c750aaa5",
    "metadata": {},
    "outputs": [
@@ -314,12 +328,12 @@
     "import { Presentation } from '@docknetwork/crypto-wasm-ts'\n",
     "\n",
     "// The verifier creates his own parameters for the range proof\n",
-    "const boundCheckBppParams2 = new BoundCheckBppParams(stringToBytes('Bulletproofs++ testing')).decompress();\n",
+    "const boundCheckBppParams2 = new BoundCheckBppParams(stringToBytes('Common Reference String')).decompress();\n",
     "\n",
-    "const predicateParams1 = new Map([['random', boundCheckBppParams2]]);\n",
+    "const predicateParams1 = new Map([['ageRangeCheck', boundCheckBppParams2]]);\n",
     "\n",
     "const recreatedPres = Presentation.fromJSON(receivedObjectOnVerifierSide)\n",
-    "recreatedPres.verify([publicKey], undefined, predicateParams1, undefined, undefined, undefined)"
+    "recreatedPres.verify([publicKey], undefined, predicateParams1)"
    ]
   },
   {
@@ -341,43 +355,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "e183e475-3bcb-4fe1-9bdf-f74489ecfd3e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Time taken to setup BP++: 0.199 seconds\n",
-      "Proof size without any range bounds is: 491 bytes\n",
-      "Time taken to generate proof with no range bounds ~0.05 seconds\n",
-      "Proof size with one range bounds is: 1798  bytes\n",
-      "Time taken to generate proof with one range bounds ~0.671 seconds\n",
-      "Proof size with two range bounds is: 3105  bytes\n",
-      "Time taken to generate proof with two range bounds ~1.277 seconds\n",
-      "Proof size with three range bounds is: 4412  bytes\n",
-      "Time taken to generate proof with three range bounds ~1.913 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "// BulletProof++\n",
+    "\n",
     "// We measure the time taken to create the verification keys\n",
     "let BPProofTimes = []\n",
     "let BPProofSizes = []\n",
+    "\n",
     "// BulletProof++ -- setup time\n",
     "let startTime = performance.now();\n",
+    "\n",
     "const boundCheckBppParams = new BoundCheckBppParams(stringToBytes('Bulletproofs++ testing')).decompress();\n",
     "const BPSetupTime = Math.floor(performance.now() - startTime) / 1000;\n",
+    "\n",
     "BPProofTimes.push(BPSetupTime)\n",
     "console.log(`Time taken to setup BP++: ${BPSetupTime} seconds`)\n",
     "\n",
     "// Proof creation without any range bounds\n",
     "startTime = performance.now()\n",
+    "\n",
     "let builder = new PresentationBuilder();\n",
     "builder.addCredential(credential, publicKey)\n",
     "builder.markAttributesRevealed(0, new Set<string>(['credentialSubject.name', 'credentialSubject.profession']));\n",
     "let presentation = builder.finalize();\n",
+    "\n",
     "let consumedTime = Math.floor(performance.now() - startTime) / 1000;\n",
     "BPProofTimes.push(consumedTime);\n",
     "BPProofSizes.push(presentation.proof.bytes.length);\n",
@@ -429,26 +434,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "5ab68e7b-2e01-46df-a325-0a7648134356",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Time taken to setup LG16: 19.444 seconds\n",
-      "Proof size without any range bounds is: 491 bytes\n",
-      "Time taken to generate proof with no range bounds ~$consumedTime} seconds\n",
-      "Proof size with one range bounds is: 892  bytes\n",
-      "Time taken to generate proof with one range bounds ~14.284 seconds\n",
-      "Proof size with two range bounds is: 1293  bytes\n",
-      "Time taken to generate proof with two range bounds ~28.596 seconds\n",
-      "Proof size with three range bounds is: 1694  bytes\n",
-      "Time taken to generate proof with three range bounds ~42.77 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "// LegoGroth16\n",
     "// We measure the time taken to create the verification keys\n",
@@ -511,6 +500,7 @@
     "builder.enforceBounds(0, 'credentialSubject.age', 18, 64, 'random1', provingKey);\n",
     "builder.enforceBounds(0, 'credentialSubject.height', 170, 190, 'random2', provingKey);\n",
     "builder.enforceBounds(0, 'credentialSubject.weight', 70, 85, 'random3', provingKey);\n",
+    "\n",
     "presentation = builder.finalize();\n",
     "consumedTime = Math.floor(performance.now() - startTime) / 1000;\n",
     "LGProofTimes.push(consumedTime)\n",
@@ -521,15 +511,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "5604e8cc-431a-4244-bfa3-b482dd216fce",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[ \u001b[33m0.199\u001b[39m, \u001b[33m0.05\u001b[39m, \u001b[33m0.671\u001b[39m, \u001b[33m1.277\u001b[39m, \u001b[33m1.913\u001b[39m ] [ \u001b[33m19.444\u001b[39m, \u001b[33m0.049\u001b[39m, \u001b[33m14.284\u001b[39m, \u001b[33m28.596\u001b[39m, \u001b[33m42.77\u001b[39m ] [ \u001b[33m491\u001b[39m, \u001b[33m1798\u001b[39m, \u001b[33m3105\u001b[39m, \u001b[33m4412\u001b[39m ] [ \u001b[33m892\u001b[39m, \u001b[33m1293\u001b[39m, \u001b[33m1694\u001b[39m ]\n"
+      "1:13 - Cannot find name 'BPProofTimes'.\n",
+      "1:27 - Cannot find name 'LGProofTimes'.\n",
+      "1:41 - Cannot find name 'BPProofSizes'.\n",
+      "1:55 - Cannot find name 'LGProofSizes'.\n"
      ]
     }
    ],
@@ -538,9 +531,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ce5d5920-aadd-4206-9a6e-089cd9e56324",
+   "metadata": {},
+   "source": [
+    "## Notes\n",
+    "- Make sure the range bounds have a inclusive upper bound or exclusive bound\n",
+    "- Check if there's a standard for the \"presentations\" format.\n",
+    "- Find a reference for the implementation on bulletProof++ used in docknetwork\n",
+    "- Move the comparisons to exercise3B. And name this exercise3A\n",
+    "- Add the verification times to the comparison \n",
+    "    - Do two figures: verifiers, and another for holders. \n",
+    "        - Each bar in the verifier should show total word done by the verifier (setup time + verification time)\n",
+    "        - Each bar in the holder should show total time taken to create the proof (+ setup time in case of BP++)\n",
+    "\n",
+    "## ToDo: Workshop activities\n",
+    "Option1: Add an accumlator using a negative membership check\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec20b6ad-9727-4037-b6bc-a601146a61e0",
+   "id": "cb6f3aa5-41cd-41a9-b27d-653a46bc02b1",
    "metadata": {},
    "outputs": [],
    "source": []
