refactor the exercises and clean a bit
After meeting with Linus, we came up with a toDo list specified at the end of each exercise
What's done in this PR:
- Splitting exercise3 into 3A and 3B
- Replace age with timeOfBirth

--- a/exercise-03-plots.ipynb
+++ b/exercise-03-plots.ipynb
@@ -5,7 +5,7 @@
    "id": "a69f51a5-1afe-45c6-899f-0ea5d5f92b0b",
    "metadata": {},
    "source": [
-    "## class 3 Plots\n",
+    "## Exercise 3 Plots\n",
     "\n",
     "### 1. Proof Generation Times\n",
     "### 2. Proof Sizes"
