--- a/exercise-03B.ipynb
+++ b/exercise-03B.ipynb
@@ -5,7 +5,8 @@
    "id": "2856edce-b316-4d47-a561-668a4edc2bc0",
    "metadata": {},
    "source": [
-    "### Welcome to the third class on E-ID in this 3-class series\n",
+    "### Welcome to the third exercise on E-ID in this E-ID Workshop\n",
+    "\n",
     "Before we start, make sure you have everything installed by following one of the outlined methods in the ReadMe file. \n",
     "\n",
     "### Purpose of this exercise\n",
@@ -28,14 +29,14 @@
     "    properties: {\n",
     "        name: { type: 'string' },\n",
     "        profession: { type: 'string' },\n",
-    "        age: { type: 'integer', minimum: 0, maximum: 120},\n",
+    "        timeOfBirth: { type: 'integer', minimum: 0, maximum: 120},\n",
     "        height: {type: 'integer', minimum: 130, maximum: 210},\n",
     "        weight: {type: 'number', minimum: 40, multipleOf: 0.1}\n",
     "    }\n",
     "}\n",
     "const E_ID_DATA = {\n",
     "    name: \"Jack Sparrow\",\n",
-    "    age: 61,\n",
+    "    timeOfBirth: new Date(\"1993-08-01T00:00:00\").getTime(),\n",
     "    profession: \"IT Manager\",\n",
     "    height: 176,\n",
     "    weight: 84\n",
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "b70c8b80-d9c7-4f37-b36f-2306d4386b9e",
    "metadata": {},
    "outputs": [],
@@ -146,7 +147,7 @@
     "const builder = new PresentationBuilder();\n",
     "builder.addCredential(credential, publicKey)\n",
     "builder.markAttributesRevealed(0, new Set<string>(['credentialSubject.name', 'credentialSubject.profession']));\n",
-    "builder.enforceBounds(0, 'credentialSubject.age', 18, 64, 'ageRangeCheck', snarkProvingKey);\n",
+    "builder.enforceBounds(0, 'credentialSubject.height', 170, 190, 'ageRangeCheck', snarkProvingKey);\n",
     "\n",
     "const presentation = builder.finalize();"
    ]
@@ -180,7 +181,7 @@
       "{\n",
       "  version: \u001b[32m'0.7.0'\u001b[39m,\n",
       "  schema: {\n",
-      "    details: \u001b[32m'{\"jsonSchema\":{\"$schema\":\"http://json-schema.org/draft-07/schema#\",\"definitions\":{\"encryptableCompString\":{\"type\":\"string\"},\"encryptableString\":{\"type\":\"string\"}},\"properties\":{\"credentialSubject\":{\"properties\":{\"age\":{\"maximum\":120,\"minimum\":0,\"type\":\"integer\"},\"height\":{\"maximum\":210,\"minimum\":130,\"type\":\"integer\"},\"name\":{\"type\":\"string\"},\"profession\":{\"type\":\"string\"},\"weight\":{\"minimum\":40,\"multipleOf\":0.1,\"type\":\"number\"}},\"type\":\"object\"},\"proof\":{\"properties\":{\"type\":{\"type\":\"string\"}},\"type\":\"object\"}},\"type\":\"object\"},\"parsingOptions\":{\"defaultDecimalPlaces\":0,\"defaultMinimumDate\":-17592186044415,\"defaultMinimumInteger\":-4294967295,\"useDefaults\":false}}'\u001b[39m,\n",
+      "    details: \u001b[32m'{\"jsonSchema\":{\"$schema\":\"http://json-schema.org/draft-07/schema#\",\"definitions\":{\"encryptableCompString\":{\"type\":\"string\"},\"encryptableString\":{\"type\":\"string\"}},\"properties\":{\"credentialSubject\":{\"properties\":{\"height\":{\"maximum\":210,\"minimum\":130,\"type\":\"integer\"},\"name\":{\"type\":\"string\"},\"profession\":{\"type\":\"string\"},\"timeOfBirth\":{\"maximum\":120,\"minimum\":0,\"type\":\"integer\"},\"weight\":{\"minimum\":40,\"multipleOf\":0.1,\"type\":\"number\"}},\"type\":\"object\"},\"proof\":{\"properties\":{\"type\":{\"type\":\"string\"}},\"type\":\"object\"}},\"type\":\"object\"},\"parsingOptions\":{\"defaultDecimalPlaces\":0,\"defaultMinimumDate\":-17592186044415,\"defaultMinimumInteger\":-4294967295,\"useDefaults\":false}}'\u001b[39m,\n",
       "    id: \u001b[32m'data:application/json;charset=utf-8,'\u001b[39m,\n",
       "    type: \u001b[32m'JsonSchemaValidator2018'\u001b[39m,\n",
       "    version: \u001b[32m'0.5.0'\u001b[39m\n",
@@ -188,7 +189,7 @@
       "  revealedAttributes: {\n",
       "    credentialSubject: { name: \u001b[32m'Jack Sparrow'\u001b[39m, profession: \u001b[32m'IT Manager'\u001b[39m }\n",
       "  },\n",
-      "  bounds: { credentialSubject: { age: \u001b[36m[Array]\u001b[39m } },\n",
+      "  bounds: { credentialSubject: { height: \u001b[36m[Array]\u001b[39m } },\n",
       "  sigType: \u001b[32m'Bls12381BBSSignatureDock2023'\u001b[39m\n",
       "}\n"
      ]
@@ -234,20 +235,24 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  age: [\n",
-      "    {\n",
-      "      min: \u001b[33m18\u001b[39m,\n",
-      "      max: \u001b[33m64\u001b[39m,\n",
-      "      paramId: \u001b[32m'ageRangeCheck'\u001b[39m,\n",
-      "      protocol: \u001b[32m'LegoGroth16'\u001b[39m\n",
-      "    }\n",
-      "  ]\n",
+      "  version: \u001b[32m'0.7.0'\u001b[39m,\n",
+      "  schema: {\n",
+      "    details: \u001b[32m'{\"jsonSchema\":{\"$schema\":\"http://json-schema.org/draft-07/schema#\",\"definitions\":{\"encryptableCompString\":{\"type\":\"string\"},\"encryptableString\":{\"type\":\"string\"}},\"properties\":{\"credentialSubject\":{\"properties\":{\"height\":{\"maximum\":210,\"minimum\":130,\"type\":\"integer\"},\"name\":{\"type\":\"string\"},\"profession\":{\"type\":\"string\"},\"timeOfBirth\":{\"maximum\":120,\"minimum\":0,\"type\":\"integer\"},\"weight\":{\"minimum\":40,\"multipleOf\":0.1,\"type\":\"number\"}},\"type\":\"object\"},\"proof\":{\"properties\":{\"type\":{\"type\":\"string\"}},\"type\":\"object\"}},\"type\":\"object\"},\"parsingOptions\":{\"defaultDecimalPlaces\":0,\"defaultMinimumDate\":-17592186044415,\"defaultMinimumInteger\":-4294967295,\"useDefaults\":false}}'\u001b[39m,\n",
+      "    id: \u001b[32m'data:application/json;charset=utf-8,'\u001b[39m,\n",
+      "    type: \u001b[32m'JsonSchemaValidator2018'\u001b[39m,\n",
+      "    version: \u001b[32m'0.5.0'\u001b[39m\n",
+      "  },\n",
+      "  revealedAttributes: {\n",
+      "    credentialSubject: { name: \u001b[32m'Jack Sparrow'\u001b[39m, profession: \u001b[32m'IT Manager'\u001b[39m }\n",
+      "  },\n",
+      "  bounds: { credentialSubject: { height: \u001b[36m[Array]\u001b[39m } },\n",
+      "  sigType: \u001b[32m'Bls12381BBSSignatureDock2023'\u001b[39m\n",
       "}\n"
      ]
     }
    ],
    "source": [
-    "presentation.spec.credentials[0].bounds.credentialSubject"
+    "presentation.spec.credentials[0]"
    ]
   },
   {
@@ -281,7 +286,7 @@
       "{\n",
       "  version: \u001b[32m'0.7.0'\u001b[39m,\n",
       "  schema: {\n",
-      "    details: \u001b[32m'{\"jsonSchema\":{\"$schema\":\"http://json-schema.org/draft-07/schema#\",\"definitions\":{\"encryptableCompString\":{\"type\":\"string\"},\"encryptableString\":{\"type\":\"string\"}},\"properties\":{\"credentialSubject\":{\"properties\":{\"age\":{\"maximum\":120,\"minimum\":0,\"type\":\"integer\"},\"height\":{\"maximum\":210,\"minimum\":130,\"type\":\"integer\"},\"name\":{\"type\":\"string\"},\"profession\":{\"type\":\"string\"},\"weight\":{\"minimum\":40,\"multipleOf\":0.1,\"type\":\"number\"}},\"type\":\"object\"},\"proof\":{\"properties\":{\"type\":{\"type\":\"string\"}},\"type\":\"object\"}},\"type\":\"object\"},\"parsingOptions\":{\"defaultDecimalPlaces\":0,\"defaultMinimumDate\":-17592186044415,\"defaultMinimumInteger\":-4294967295,\"useDefaults\":false}}'\u001b[39m,\n",
+      "    details: \u001b[32m'{\"jsonSchema\":{\"$schema\":\"http://json-schema.org/draft-07/schema#\",\"definitions\":{\"encryptableCompString\":{\"type\":\"string\"},\"encryptableString\":{\"type\":\"string\"}},\"properties\":{\"credentialSubject\":{\"properties\":{\"height\":{\"maximum\":210,\"minimum\":130,\"type\":\"integer\"},\"name\":{\"type\":\"string\"},\"profession\":{\"type\":\"string\"},\"timeOfBirth\":{\"maximum\":120,\"minimum\":0,\"type\":\"integer\"},\"weight\":{\"minimum\":40,\"multipleOf\":0.1,\"type\":\"number\"}},\"type\":\"object\"},\"proof\":{\"properties\":{\"type\":{\"type\":\"string\"}},\"type\":\"object\"}},\"type\":\"object\"},\"parsingOptions\":{\"defaultDecimalPlaces\":0,\"defaultMinimumDate\":-17592186044415,\"defaultMinimumInteger\":-4294967295,\"useDefaults\":false}}'\u001b[39m,\n",
       "    id: \u001b[32m'data:application/json;charset=utf-8,'\u001b[39m,\n",
       "    type: \u001b[32m'JsonSchemaValidator2018'\u001b[39m,\n",
       "    version: \u001b[32m'0.5.0'\u001b[39m\n",
@@ -289,7 +294,7 @@
       "  revealedAttributes: {\n",
       "    credentialSubject: { name: \u001b[32m'Jack Sparrow'\u001b[39m, profession: \u001b[32m'IT Manager'\u001b[39m }\n",
       "  },\n",
-      "  bounds: { credentialSubject: { age: \u001b[36m[Array]\u001b[39m } },\n",
+      "  bounds: { credentialSubject: { height: \u001b[36m[Array]\u001b[39m } },\n",
       "  sigType: \u001b[32m'Bls12381BBSSignatureDock2023'\u001b[39m\n",
       "}\n"
      ]
@@ -303,7 +308,8 @@
     "\n",
     "// The Holder creates his own parameters for the range proof\n",
     "const boundCheckBppParams1 = new BoundCheckBppParams(stringToBytes('Common Reference String')).decompress();\n",
-    "builder.enforceBounds(0, 'credentialSubject.age', 18, 64, 'ageRangeCheck', boundCheckBppParams1);\n",
+    "// builder.enforceBounds(0, 'credentialSubject.timeOfBirth', new Date(\"1972-01-01T00:00:00\").getTime(), new Date(\"2020-08-01T00:00:00\").getTime(), 'ageRangeCheck', boundCheckBppParams1);\n",
+    "builder.enforceBounds(0, 'credentialSubject.height', 170, 190, 'ageRangeCheck', boundCheckBppParams1);\n",
     "\n",
     "const presentation = builder.finalize();\n",
     "const receivedObjectOnVerifierSide = presentation.toJSON()\n",
@@ -312,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "b07e3e40-da17-4c0d-ac31-66e3c750aaa5",
    "metadata": {},
    "outputs": [
@@ -355,10 +361,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "e183e475-3bcb-4fe1-9bdf-f74489ecfd3e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time taken to setup BP++: 0.105 seconds\n",
+      "Proof size without any range bounds is: 491 bytes\n",
+      "Time taken to generate proof with no range bounds ~0.027 seconds\n",
+      "Proof size with one range bounds is: 1798  bytes\n",
+      "Time taken to generate proof with one range bounds ~0.362 seconds\n",
+      "Proof size with two range bounds is: 3105  bytes\n",
+      "Time taken to generate proof with two range bounds ~0.693 seconds\n",
+      "Proof size with three range bounds is: 4412  bytes\n",
+      "Time taken to generate proof with three range bounds ~1.017 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "// BulletProof++\n",
     "\n",
@@ -394,7 +416,7 @@
     "builder = new PresentationBuilder();\n",
     "builder.addCredential(credential, publicKey)\n",
     "builder.markAttributesRevealed(0, new Set<string>(['credentialSubject.name', 'credentialSubject.profession']));\n",
-    "builder.enforceBounds(0, 'credentialSubject.age', 18, 64, 'random', boundCheckBppParams);\n",
+    "builder.enforceBounds(0, 'credentialSubject.timeOfBirth', new Date(\"1972-01-01T00:00:00\").getTime(), new Date(\"2020-08-01T00:00:00\").getTime(), 'ageRangeCheck', boundCheckBppParams1);\n",
     "presentation = builder.finalize();\n",
     "consumedTime = Math.floor(performance.now() - startTime) / 1000;\n",
     "BPProofTimes.push(consumedTime);\n",
@@ -407,7 +429,7 @@
     "builder = new PresentationBuilder();\n",
     "builder.addCredential(credential, publicKey)\n",
     "builder.markAttributesRevealed(0, new Set<string>(['credentialSubject.name', 'credentialSubject.profession']));\n",
-    "builder.enforceBounds(0, 'credentialSubject.age', 18, 64, 'random1', boundCheckBppParams);\n",
+    "builder.enforceBounds(0, 'credentialSubject.timeOfBirth', new Date(\"1972-01-01T00:00:00\").getTime(), new Date(\"2020-08-01T00:00:00\").getTime(), 'ageRangeCheck', boundCheckBppParams1);\n",
     "builder.enforceBounds(0, 'credentialSubject.height', 170, 190, 'random2', boundCheckBppParams);\n",
     "presentation = builder.finalize();\n",
     "consumedTime = Math.floor(performance.now() - startTime) / 1000;\n",
@@ -421,7 +443,7 @@
     "builder = new PresentationBuilder();\n",
     "builder.addCredential(credential, publicKey)\n",
     "builder.markAttributesRevealed(0, new Set<string>(['credentialSubject.name', 'credentialSubject.profession']));\n",
-    "builder.enforceBounds(0, 'credentialSubject.age', 18, 64, 'random1', boundCheckBppParams);\n",
+    "builder.enforceBounds(0, 'credentialSubject.timeOfBirth', new Date(\"1972-01-01T00:00:00\").getTime(), new Date(\"2020-08-01T00:00:00\").getTime(), 'ageRangeCheck', boundCheckBppParams1);\n",
     "builder.enforceBounds(0, 'credentialSubject.height', 170, 190, 'random2', boundCheckBppParams);\n",
     "builder.enforceBounds(0, 'credentialSubject.weight', 70, 85, 'random3', boundCheckBppParams);\n",
     "presentation = builder.finalize();\n",
@@ -437,7 +459,19 @@
    "execution_count": null,
    "id": "5ab68e7b-2e01-46df-a325-0a7648134356",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time taken to setup LG16: 10.253 seconds\n",
+      "Proof size without any range bounds is: 491 bytes\n",
+      "Time taken to generate proof with no range bounds ~$consumedTime} seconds\n",
+      "Proof size with one range bounds is: 892  bytes\n",
+      "Time taken to generate proof with one range bounds ~7.631 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "// LegoGroth16\n",
     "// We measure the time taken to create the verification keys\n",
@@ -470,7 +504,7 @@
     "builder = new PresentationBuilder();\n",
     "builder.addCredential(credential, publicKey)\n",
     "builder.markAttributesRevealed(0, new Set<string>(['credentialSubject.name', 'credentialSubject.profession']));\n",
-    "builder.enforceBounds(0, 'credentialSubject.age', 18, 64, 'random', provingKey);\n",
+    "builder.enforceBounds(0, 'credentialSubject.timeOfBirth', new Date(\"1972-01-01T00:00:00\").getTime(), new Date(\"2020-08-01T00:00:00\").getTime(), 'random', provingKey);\n",
     "presentation = builder.finalize();\n",
     "consumedTime = Math.floor(performance.now() - startTime) / 1000;\n",
     "LGProofTimes.push(consumedTime)\n",
@@ -483,7 +517,7 @@
     "builder = new PresentationBuilder();\n",
     "builder.addCredential(credential, publicKey)\n",
     "builder.markAttributesRevealed(0, new Set<string>(['credentialSubject.name', 'credentialSubject.profession']));\n",
-    "builder.enforceBounds(0, 'credentialSubject.age', 18, 64, 'random1', provingKey);\n",
+    "builder.enforceBounds(0, 'credentialSubject.timeOfBirth', new Date(\"1972-01-01T00:00:00\").getTime(), new Date(\"2020-08-01T00:00:00\").getTime(), 'random', provingKey);\n",
     "builder.enforceBounds(0, 'credentialSubject.height', 170, 190, 'random2', provingKey);\n",
     "presentation = builder.finalize();\n",
     "consumedTime = Math.floor(performance.now() - startTime) / 1000;\n",
@@ -497,7 +531,7 @@
     "builder = new PresentationBuilder();\n",
     "builder.addCredential(credential, publicKey)\n",
     "builder.markAttributesRevealed(0, new Set<string>(['credentialSubject.name', 'credentialSubject.profession']));\n",
-    "builder.enforceBounds(0, 'credentialSubject.age', 18, 64, 'random1', provingKey);\n",
+    "builder.enforceBounds(0, 'credentialSubject.timeOfBirth', new Date(\"1972-01-01T00:00:00\").getTime(), new Date(\"2020-08-01T00:00:00\").getTime(), 'random', provingKey);\n",
     "builder.enforceBounds(0, 'credentialSubject.height', 170, 190, 'random2', provingKey);\n",
     "builder.enforceBounds(0, 'credentialSubject.weight', 70, 85, 'random3', provingKey);\n",
     "\n",
@@ -511,21 +545,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "5604e8cc-431a-4244-bfa3-b482dd216fce",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "1:13 - Cannot find name 'BPProofTimes'.\n",
-      "1:27 - Cannot find name 'LGProofTimes'.\n",
-      "1:41 - Cannot find name 'BPProofSizes'.\n",
-      "1:55 - Cannot find name 'LGProofSizes'.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "console.log(BPProofTimes, LGProofTimes, BPProofSizes, LGProofSizes)"
    ]
