Add activity question and exercise

--- a/exercise-01.ipynb
+++ b/exercise-01.ipynb
@@ -340,6 +340,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "af6e7c15-be86-47ac-b0b5-0c54a47fcf88",
+   "metadata": {},
+   "source": [
+    "# Activity\n",
+    "\n",
+    "Question: Ask about the downsides of using hashed values in E-ID?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f37642f1-e391-43e3-8646-42fccfb0cc7b",
    "metadata": {},
    "source": [
@@ -363,10 +373,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "61feedae-9c82-4af7-a74f-c4bd63db898f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  name: \u001b[32m'a5d0dd92108bc55cadfaf56e36a60a7121b059d9e0d09c2d24d853e9d1d14ea7'\u001b[39m,\n",
+      "  timeOfBirth: \u001b[32m'1f2336f8e0f01df150e470be77b33e4c9b9e758293a9e2944140cdeba976ff45'\u001b[39m,\n",
+      "  profession: \u001b[32m'c249aac9d89f89626fbcaa519d53e386478a22b775414c324e61289e033f1652'\u001b[39m\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "// data in hashed form. hashing an timeOfBirth of 61 will always be the same.\n",
     "RETRIEVED_DATA"
@@ -377,16 +399,13 @@
    "id": "3c874676-eef7-4e0d-8962-82fe6fbb16e0",
    "metadata": {},
    "source": [
-    "## ToDo: Workshop activities\n",
-    "What can the student change, adjust to change the functionalities? \n",
-    "Exercise: \n",
-    "1. Ask about the downsides of using hashed values in E-ID.\n",
-    "2. Focus on implementing Salt-based hashing to prevent \"limited set hashed values like timeOfBirth\".\n",
+    "## Exercise: \n",
+    "Right now, the timeOfBirth can be guessed by looping over all possible dates to figure out someone's exact date of birth. \n",
     "\n",
-    "## Fixes\n",
-    "- [x] Use birthdate as age can get outdated\n",
-    "- [x] Assume that SHA256 is the standard for all actors of the system - Don't communicate it.\n",
-    "- [x] Review the ToDos in code"
+    "### Task\n",
+    "Reimplement the communication between the holder and verifier modifying the hash function in a way that doesn't make it easy to guess someone date of birth.\n",
+    "\n",
+    "!Ask for a hint!"
    ]
   },
   {
