Updates exercises with comments

--- a/exercise-02.ipynb
+++ b/exercise-02.ipynb
@@ -18,6 +18,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f355c973-64ac-4c10-91c1-e58969bba6a7",
+   "metadata": {},
+   "source": [
+    "The author of this crypto library is Dock.io\n",
+    "\n",
+    "Dock.io is one of the leading startups in the Crypto E-ID space.  \n",
+    "They open-source many fundamental libraries including the one we're using it today.\n",
+    "- Dock.io has 16 employess published on their website\n",
+    "- Originally Swiss but based in the US\n",
+    "- Some 20 million USD in funding (Web3 Foundation - lead investor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "489c6f67-fab3-4499-bd3b-33d1bb69c1cc",
    "metadata": {},
    "source": [
@@ -53,6 +67,19 @@
     "        timeOfBirth: { type: 'integer', minimum: 0},\n",
     "    }\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68984925-7842-47b0-aab2-990d409b1f21",
+   "metadata": {},
+   "source": [
+    "### JSON Schema\n",
+    "The schema above is defined using JSON schema.  \n",
+    "JSON Schema is the standard for defining the structure/ schema of a JSON object. It's typically used\n",
+    "to define a contract for APIs and data communication (which use JSON).  \n",
+    "One known standard that builds on JSON schema is the Open API Specification (OAS - previously known as swagger). \n",
+    "OAS -in its latest versions- uses a superset of the latest published [JSON schema](https://json-schema.org/specification) (2020-12)"
    ]
   },
   {
@@ -406,21 +433,12 @@
    "id": "900c23d6-c5ce-4042-a9cc-a121792f67b3",
    "metadata": {},
    "source": [
-    "## Notes\n",
-    "- Mention what docknetwork is -> a startup in the E-ID space... (get me details from website)\n",
-    "- Who is investing in them, and how big is their company (number of employees, and clients)\n",
-    "- Collect some statisic information on the usage of JSON Schema\n",
-    "\n",
-    "## ToDo: Workshop activities\n",
-    "What can the student change, adjust to change the functionalities? \n",
-    "Exercise: \n",
+    "## Exercise: \n",
     "Divide into three teams (issuers (min:1), holders(min:2), verifiers(min:1))\n",
     "and use a chat tool to communicate. \n",
+    "-> Linus already used a chat tool in his classes!\n",
     "\n",
-    "-- (Maybe) do a small PKI somewhere.\n",
-    "\n",
-    "## Fixes\n",
-    "- [x] Review the ToDos in code"
+    "-- (Maybe) do a small PKI somewhere."
    ]
   },
   {
