Clears all output in preparation for workshop

--- a/exercise-02.ipynb
+++ b/exercise-02.ipynb
@@ -77,7 +77,7 @@
     "### JSON Schema\n",
     "The schema above is defined using JSON schema.  \n",
     "JSON Schema is the standard for defining the structure/ schema of a JSON object. It's typically used\n",
-    "to define a contract for APIs and data communication (which use JSON).  \n",
+    "to define a contract for APIs and data communication (that use JSON).  \n",
     "One known standard that builds on JSON schema is the Open API Specification (OAS - previously known as swagger). \n",
     "OAS -in its latest versions- uses a superset of the latest published [JSON schema](https://json-schema.org/specification) (2020-12)"
    ]
@@ -433,10 +433,9 @@
    "id": "900c23d6-c5ce-4042-a9cc-a121792f67b3",
    "metadata": {},
    "source": [
-    "## Exercise: \n",
-    "Divide into three teams (issuers (min:1), holders(min:2), verifiers(min:1))\n",
+    "## Exercise:  \n",
+    "Divide into two groups of three teams (issuers (min:1), holders(min:2), verifiers(min:1))\n",
     "and use a chat tool to communicate. \n",
-    "-> Linus already used a chat tool in his classes!\n",
     "\n",
     "-- (Maybe) do a small PKI somewhere."
    ]
@@ -444,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a7b4251-4ca8-4aa5-be53-b750af25d183",
+   "id": "ee626472-3d4b-412b-a28a-702dfdd92aa0",
    "metadata": {},
    "outputs": [],
    "source": []
